// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlusIcon: Component should render correctly 1`] = `
<plus.svg
  style={
    Object {
      "fill": "#1d1d20",
      "height": "60px",
      "width": "60px",
    }
  }
/>
`;

exports[`PlusIcon: Component should render with custom styles 1`] = `
<plus.svg
  style={
    Object {
      "fill": "blue",
      "height": "60px",
      "width": "60px",
    }
  }
/>
`;
